--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -1,1 +1,22 @@
-<div class="quiz__container"></div>
+<div class="quizz__container">
+  <div class="quizz_logo">
+    <img src="assets/image/logo.png" alt="" />
+    <h3>{{ title }}</h3>
+  </div>
+  <div *ngIf="!finished" class="quizz_questions">
+    <h3>{{ questionsSelected.question }}</h3>
+  </div>
+  <div *ngIf="!finished" class="quizz_options">
+    <button
+      *ngFor="let option of questionsSelected.options; let i = index"
+      (click)="playerChoose(option.alias)"
+      class="btn-option"
+    >
+      {{ option.name }}
+    </button>
+  </div>
+  <div *ngIf="finished" class="quizz_results">
+    <h1>O Seu resultado é:</h1>
+    <p>{{ answersSelected }}</p>
+  </div>
+</div>
